added image in user_post display page

--- a/django_project/wanderlust/templates/wanderlust/user_posts.html
+++ b/django_project/wanderlust/templates/wanderlust/user_posts.html
@@ -12,6 +12,9 @@
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
           </div>
+          <div class="img">
+            <img class="img-fluid" src="{{ post.image.url }}" object-fit=cover height=200px width=220px>
+          </div>
         </article>
     {% endfor %}
 
