--- a/django_project/wanderlust/static/wanderlust/main.css
+++ b/django_project/wanderlust/static/wanderlust/main.css
@@ -1,5 +1,5 @@
 body {
-  background: #fafafa;
+  background: #dbe0e7;
   color: #333333;
   margin-top: 5rem;
 }
@@ -13,7 +13,7 @@ ul {
 }
 
 .bg-steel {
-  background-color: #5f788a;
+  background-color: #255ca5;
 }
 
 .site-header .navbar-nav .nav-link {
